--- a/configs/sampling_Frag.yml
+++ b/configs/sampling_Frag.yml
@@ -1,9 +1,7 @@
 model:
 
-  checkpoint: /home/csy/work/3D/PharDiff/logs_diffusion/training_2023_11_09__12_27_14/checkpoints/20200.pt
+  checkpoint: # checkpoint path
   
-  ## Most highest performance checkpoint [PINN]
-  #checkpoint: /home/csy/work/3D/targetdiff_PINN/logs_diffusion/training_2023_09_30__19_56_28/checkpoints/30600.pt
 
 
 sample:
