--- a/configs/sampling_NoFrag.yml
+++ b/configs/sampling_NoFrag.yml
@@ -1,9 +1,6 @@
 model:
 
-  checkpoint: /home/csy/work/3D/PharDiff/logs_diffusion/training_2023_11_06__16_04_28NoFrag/checkpoints/27200.pt
-  
-  ## Most highest performance checkpoint [PINN]
-  #checkpoint: /home/csy/work/3D/targetdiff_PINN/logs_diffusion/training_2023_09_30__19_56_28/checkpoints/30600.pt
+  checkpoint: # checkpoint path
 
 
 sample:
